--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,8 @@ body {
 
 .wrapper-achievement {
     position: relative;
-    padding: 56px 64px;
+    padding: 56px 0;
+    height: 100vh;
 }
 
 .wrapper-achievement::after {
@@ -60,7 +61,8 @@ body {
     background: linear-gradient(114deg, rgba(255, 255, 255, 0.24) 3%, rgba(255, 255, 255, 0.06) 81.86%);
     box-shadow: 0px 8px 100px -1px rgba(0, 0, 0, 0.24);
     backdrop-filter: blur(10px);
-    height: 788px;
+    height: 100%;
+    max-height: 788px;
     margin: 0 auto;
     position: relative;
     z-index: 3;
@@ -633,6 +635,9 @@ body {
 }
 
 @media (max-width: 992px) {
+    .section-achievement {
+        max-height: 100%;
+    }
     .section-achievement__countdown {
         padding: 0;
         background: none;
@@ -881,11 +886,13 @@ body {
     .chats-item__content .point {
         font-weight: 400;
     }
-    .charts-list-2__title{
+
+    .charts-list-2__title {
         margin-bottom: 12px;
     }
+
     .charts-item-2,
-    .section-charts__list-2{
+    .section-charts__list-2 {
         gap: 12px;
     }
 
@@ -934,7 +941,8 @@ body {
     .section-achievement__item {
         margin-bottom: 32px;
     }
-    .charts-2__point > span{
+
+    .charts-2__point > span {
         display: none;
     }
 }
